--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "Incredible India AR Experience - SIH Project",
   "scripts": {
-    "build": "echo 'Build script completed'",
-    "start": "serve -s public"
+    "build": "echo 'No build step required for static files'",
+    "start": "serve public -p $PORT",
+    "dev": "serve public"
   },
   "dependencies": {
     "serve": "^14.0.0"
+  },
+  "engines": {
+    "node": ">=14.x"
   }
 }
