--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "public" }
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+    { "src": "/(.*)", "dest": "/public/$1" },
+    { "src": "/ar", "dest": "/public/ar.html" },
+    { "src": "/about", "dest": "/public/about.html" },
+    { "src": "/(.*)", "dest": "/public/index.html" }
   ]
 }
