--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,7 @@
     }
   ],
   "routes": [
-    { "src": "/ar", "dest": "/public/ar-embedded.html" },
-    { "src": "/about", "dest": "/public/about.html" },
+    { "src": "/ar-experience", "dest": "/public/ar-experience.html" },
     { "src": "/", "dest": "/public/index.html" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ]
