--- a/vercel.json
+++ b/vercel.json
@@ -13,20 +13,8 @@
     }
   ],
   "routes": [
-    { "src": "/model-viewer", "dest": "/model-viewer.html" },
-    { "src": "/model-viewer/(?<id>[^/]+)", "dest": "/model-viewer.html?id=$id" },
-    { "src": "/ar/(?<model>[^/]+)", "dest": "/ar.html?model=$model" },
-    { "src": "/sanchi", "dest": "/sanchi-ar.html" },
-    { "src": "/sankranti", "dest": "/sankranti-ar.html" },
-    { "src": "/kaaba", "dest": "/kaaba-ar.html" },
-    { "src": "/ellora", "dest": "/ellora-ar.html" },
-    { "src": "/about", "dest": "/about.html" },
-    { "src": "/team", "dest": "/team.html" },
-    { "src": "/downloads", "dest": "/downloads.html" },
-    { "src": "/", "dest": "/index.html" },
-    { 
-      "src": "/(.*)", 
-      "dest": "/404.html"
-    }
+    { "src": "/ar-experience", "dest": "/public/ar-experience.html" },
+    { "src": "/", "dest": "/public/index.html" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
