--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,8 @@
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/$1" }
+    { "src": "/ar-experience", "dest": "/public/ar-experience.html" },
+    { "src": "/", "dest": "/public/index.html" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
