--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,18 @@
     }
   ],
   "routes": [
-    { "src": "/ar-experience", "dest": "/public/ar-experience.html" },
-    { "src": "/", "dest": "/public/index.html" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "/ar-experience", "dest": "/ar-experience.html" },
+    { "src": "/model-viewer", "dest": "/model-viewer.html" },
+    { "src": "/model-viewer/([^/]+)", "dest": "/model-viewer.html?id=$1" },
+    { "src": "/ar/([^/]+)", "dest": "/ar.html?model=$1" },
+    { "src": "/sanchi", "dest": "/sanchi-ar.html" },
+    { "src": "/sankranti", "dest": "/sankranti-ar.html" },
+    { "src": "/kaaba", "dest": "/kaaba-ar.html" },
+    { "src": "/ellora", "dest": "/ellora-ar.html" },
+    { "src": "/about", "dest": "/about.html" },
+    { "src": "/team", "dest": "/team.html" },
+    { "src": "/downloads", "dest": "/downloads.html" },
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
